--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,44 +3,49 @@
 @tailwind utilities;
 
 @layer base {
-    #__nuxt{
-        @apply whitespace-pre-line flex flex-col min-h-screen justify-start font-Inter text-[#0f1119] bg-white dark:bg-[#0f1119] dark:text-white
-    }
-        
-    :root{
-        /* макимальная ширина контента */
-        @apply [--widthContent:1200px]
-        /* Растояние от границы брузера по бокам */
-        [--widthContentMargin:15px] sm:[--widthContentMargin:20px]
-    }    
+  #__nuxt {
+    @apply flex min-h-screen flex-col justify-start whitespace-pre-line bg-white dark:bg-black;
+  }
 
-    /* Настройка кастомных контейнеров */
-    /* Применение системы гридов для расположения контента в ячейку main или full или в любую другую ячейку между именованными линиями grid*/
+  :root {
+    /* макимальная ширина контента */
+    @apply /*
+        Растояние от границы брузера по бокам */ [--widthContent:1440px]
+        [--widthContentMargin:12px] sm:[--widthContentMargin:16px] lg:[--widthContentMargin:36px];
+  }
 
-    .grid-container{        
-        grid-template-columns: [full-start] minmax(var(--widthContentMargin), 1fr) [main-start] minmax(0, var(--widthContent)) [main-end] minmax(var(--widthContentMargin), 1fr) [full-end];
-        @apply grid
-    }
+  /* Настройка кастомных контейнеров */
+  /* Применение системы гридов для расположения контента в ячейку main или full или в любую другую ячейку между именованными линиями grid*/
 
-    .grid-container>*{        
-        @apply col-[main]
-    }    
+  .grid-container {
+    grid-template-columns:
+      [full-start] minmax(var(--widthContentMargin), 1fr) [main-start] minmax(
+        0,
+        var(--widthContent)
+      )
+      [main-end] minmax(var(--widthContentMargin), 1fr) [full-end];
+    @apply grid;
+  }
 
-    .wrapper{ 
-        @apply mx-auto w-[calc(100%-var(--widthContentMargin)*2)] max-w-[var(--widthContent)]
-    }
+  .grid-container > * {
+    @apply col-[main];
+  }
 
-    .container{        
-        @apply max-w-[var(--widthContent)]
-    } 
+  .wrapper {
+    @apply mx-auto w-[calc(100%-var(--widthContentMargin)*2)] max-w-[var(--widthContent)];
+  }
+
+  .container {
+    @apply max-w-[var(--widthContent)];
+  }
 }
 
 .fade-enter-active,
 .fade-leave-active {
-  @apply transition-opacity ease-linear duration-500
+  @apply transition-opacity duration-500 ease-linear;
 }
 
 .fade-enter-from,
 .fade-leave-to {
-    @apply opacity-0
+  @apply opacity-0;
 }
